--- a/searchapp/templates/searchapp/view.html
+++ b/searchapp/templates/searchapp/view.html
@@ -2,12 +2,23 @@
 {% load static %}
 
 {% block container %}
-<div class="page-content" >
-    <h1 class="page-title first-title">Результаты поиска</h1>
-    <div>
-        {% include 'mainapp/includes/inc_date_menu.html' %}
+    <div class="page-content">
+        <h3 class="search-title">Результат поиска по запросу: {{ query }}</h3>
+        <div class="nearest all">
+            {% if object_list %}
+                {% for object in object_list %}
+                    <div class="event-preview">
+                        <a href="{% url 'main:product' object.pk %}"><img src="{{ object.get_avatar }}" alt="bunner1"></a>
+                        <h2>{{ object.name }}</h2>
+                        <ul >
+                            <li><a href="#">{{ object.location.name }}</a></li>
+                            <li><a href="#">от {{ object.price }}руб.</a></li>
+                        </ul>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>Не найдено мероприятий по вашему запросу<br>Попробуйте повторить запрос с другой формулировкой</p>
+            {% endif %}
+        </div>
     </div>
-    <div class="nearest all">
-    </div>
-</div>
 {% endblock %}
