--- a/searchapp/templates/searchapp/base.html
+++ b/searchapp/templates/searchapp/base.html
@@ -23,10 +23,10 @@
 <body>
 <div class="wrapper-head">
     <div class="header wrapper">
-        <a href="{% url 'main:index' %}"><img class="logo-img" src="{% static 'img/street-icon-png-8.png' %}"
-                                              alt="logo"></a>
+        <a href="{% url 'main:index' %}">
+            <img class="logo-img" src="{% static 'img/street-icon-png-8.png' %}" alt="logo">
+        </a>
 
-        <!-- поиск мероприятия по названию -->
         <form action="{% url 'search:view' %}" method="get">
             <input type="search" name="q" placeholder="Поиск по названию">
             <img class="search" src="{% static 'img/search.png' %}" alt="search">
@@ -40,10 +40,11 @@
             <a href="{% url 'auth:login' %}" class="login">Войти</a>
         {% endif %}
     </div>
+
     {% include 'mainapp/includes/inc_main_menu.html' %}
+
 </div>
-{% block event-block %}
-{% endblock %}
+
 <div class="container wrapper">
 
     {% block container %}
@@ -56,7 +57,11 @@
             <div class="footer-wraper page-content">
                 <div class="footer-subscribe">
                     <p class="footer-subscribe-label">Подпишитесь на акции <br> и анонсы событий</p>
-                    <a href="{% url 'auth:sending' %}" class="subscribe-btn">Далее</a>
+                    <form class="footer-subscribe-form">
+                        <input type="email" class="subscribe-email" id="email"
+                               placeholder="Электронная почта">
+                        <input class="subscribe-btn" type="submit" value="Далее">
+                    </form>
                 </div>
                 <hr class="footer-side">
                 <div class="footer-main">
