prepare get param in events view prepare filter link in template

--- a/mainapp/templates/mainapp/includes/inc_date_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_date_menu.html
@@ -1,6 +1,6 @@
 <ul class="menu-date">
-	<li><a href="#">Дата</a></li>
-	<li><a href="#">Сегодня</a></li>
-	<li><a href="#">Завтра</a></li>
-	<li><a href="#">На выходных</a></li>
+	<li><a href="{{ request.path }}?date=06.07.2019">Дата</a></li>
+	<li><a href="{{ request.path }}?date=07.07.2019">Сегодня</a></li>
+	<li><a href="{{ request.path }}?date=08.07.2019">Завтра</a></li>
+	<li><a href="{{ request.path }}?date=12.07.2019">На выходных</a></li>
 </ul>
