--- a/mainapp/templates/mainapp/includes/inc_date_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_date_menu.html
@@ -1,6 +1,6 @@
 <ul class="menu-date">
-	<li><a href="{{ request.path }}?date=06.07.2019">Дата</a></li>
-	<li><a href="{{ request.path }}?date=07.07.2019">Сегодня</a></li>
-	<li><a href="{{ request.path }}?date=08.07.2019">Завтра</a></li>
-	<li><a href="{{ request.path }}?date=12.07.2019">На выходных</a></li>
+	<li><a href="{{ request.path }}?first_date=06.07.2019">Дата</a></li>
+	<li><a href="{{ request.path }}?first_date={{ today }}">Сегодня</a></li>
+	<li><a href="{{ request.path }}?first_date={{ tomorrow }}">Завтра</a></li>
+	<li><a href="{{ request.path }}?first_date={{ first_date }}&second_date={{ second_date }}">На выходных</a></li>
 </ul>
