Change calendar filter to all

--- a/mainapp/templates/mainapp/includes/inc_date_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_date_menu.html
@@ -1,5 +1,5 @@
 <ul class="menu-date">
-	<li><a href="{{ request.path }}?first_date=06.07.2019">Дата</a></li>
+	<li><a href="{{ request.path }}">Все</a></li>
 	<li><a href="{{ request.path }}?first_date={{ today }}">Сегодня</a></li>
 	<li><a href="{{ request.path }}?first_date={{ tomorrow }}">Завтра</a></li>
 	<li><a href="{{ request.path }}?first_date={{ first_date }}&second_date={{ second_date }}">На выходных</a></li>
