--- a/static/css/style.css
+++ b/static/css/style.css
@@ -897,3 +897,9 @@ body {
     font-size: 20px;
     color: grey
 }
+
+.small-event-div {
+    overflow: hidden;
+    max-height: 142px;
+    border-radius: 25px;
+}
