--- a/mainapp/templates/mainapp/events_list.html
+++ b/mainapp/templates/mainapp/events_list.html
@@ -11,7 +11,9 @@
     <div class="nearest all">
         {% for event in events %}
         <div class="event-preview">
-            <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+            <div class="small-event-div">
+                <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+            </div>
             <h2>{{ event.name }}</h2>
             <ul>
             {% if event.get_dates %}
