--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -48,7 +48,9 @@
         <div class="nearest">
             {% for event in first_filter %}
                 <div class="event-preview">
-                    <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+                    <div class="small-event-div">
+                        <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+                    </div>
                     <h2>{{ event.name }}</h2>
                     <ul>
                         <!--                <li><a href="#">{{ event.date }}</a></li>-->
@@ -68,10 +70,11 @@
         <div class="nearest">
             {% for event in expect_concert %}
                 <div class="event-preview">
-                    <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+                    <div class="small-event-div">
+                        <a href="{% url 'main:product' event.pk %}"><img src="{{ event.get_avatar }}" alt="bunner1"></a>
+                    </div>
                     <h2>{{ event.name }}</h2>
                     <ul>
-                        <!--                <li><a href="#">{{ event.date }}</a></li>-->
                         <li><a href="#">{{ event.get_location_name }}</a></li>
                         <li><a href="#">от {{ event.price }} руб.</a></li>
 
